# EthHack2025

./: .gitignore  README.md  docker-compose.yaml  package-lock.json
backend/: Dockerfile  nest-cli.json  package-lock.json  package.json
backend/src/: app.module.ts  main.ts
backend/src/citizen/: citizen.controller.ts  citizen.entity.ts  citizen.module.ts  citizen.providers.ts  citizen.ts
backend/src/country/: country.controller.ts  country.entity.ts  country.module.ts  country.providers.ts  country.ts
backend/src/ethereum/: ethereum.controller.ts  ethereum.module.ts  ethereum.service.ts  ethereum.ts
backend/src/family/: family.controller.ts  family.entity.ts  family.module.ts  family.providers.ts  family.ts
backend/src/hospitals/: hospital.entity.ts  hospital.providers.ts  hospitals.controller.ts  hospitals.module.ts  hospitals.ts
backend/src/merkle/: merkle.controller.ts  merkle.module.ts  merkle.service.ts  poseidon.ts  tree.ts  utils.ts
backend/src/patients/: patient.entity.ts  patients.controller.ts  patients.module.ts  patients.ts
ethereum/: eventEmitter.sol
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/components/: Layout.tsx
frontend/interfaces/: index.ts
frontend/pages/: about.tsx  generateProof.tsx  hospital.tsx  index.tsx  patientPage.tsx  relationPage.tsx  returnData.tsx  returnRelation.tsx  userRegister.tsx  validateProof.tsx
zkp-params/: params.circuit_hash
zksnark_service/: Cargo.toml  Dockerfile  cargo-deps.txt
zksnark_service/leafIndex/: merkleIndex.rs
zksnark_service/src/: main.rs
(+60 files in other folders)
