[package]
name = "zksnark_service"
version = "0.1.0"
edition = "2021"

# Updated Cargo.toml
[dependencies]
bellperson = "0.26.0"
neptune = "11.0.0"
blstrs = "0.7.1"
actix-web = { version = "4.2", features = ["macros"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
hex = "0.4.3"
sha2 = "0.10.2"
typenum = "1.17.0"
ff = "0.13.1"
actix-web-codegen = "4.3.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
bincode = "1.3"
hostname = "0.4.1"
ring = "0.17.14"
hex-literal = "0.3"
once_cell = "1.17"
